--- a/Android 9/app/build.gradle
+++ b/Android 9/app/build.gradle
@@ -27,4 +27,6 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
     implementation 'com.android.support:recyclerview-v7:27.1.1'
     implementation 'com.android.support:cardview-v7:27.1.1'
+    implementation 'com.facebook.stetho:stetho:1.5.0'
+
 }
