--- a/Android 9/app/build.gradle
+++ b/Android 9/app/build.gradle
@@ -29,9 +29,8 @@ dependencies {
     implementation 'com.android.support:recyclerview-v7:27.1.1'
     implementation 'com.android.support:cardview-v7:27.1.1'
     implementation 'com.facebook.stetho:stetho:1.5.0'
-
     // Room (use 1.1.0-rc1 for latest version)
-    implementation "android.arch.persistence.room:runtime:1.0.0"
+    implementation 'android.arch.persistence.room:runtime:1.0.0'
     annotationProcessor "android.arch.persistence.room:compiler:1.0.0"
-
+    implementation 'com.google.code.gson:gson:2.8.2'
 }
