--- a/Android 9/app/build.gradle
+++ b/Android 9/app/build.gradle
@@ -33,4 +33,5 @@ dependencies {
     implementation 'android.arch.persistence.room:runtime:1.0.0'
     annotationProcessor "android.arch.persistence.room:compiler:1.0.0"
     implementation 'com.google.code.gson:gson:2.8.2'
+    implementation 'com.android.support:customtabs:27.1.1'
 }
