--- a/Android 9/app/build.gradle
+++ b/Android 9/app/build.gradle
@@ -34,4 +34,9 @@ dependencies {
     annotationProcessor "android.arch.persistence.room:compiler:1.0.0"
     implementation 'com.google.code.gson:gson:2.8.2'
     implementation 'com.android.support:customtabs:27.1.1'
+
+    implementation 'com.squareup.retrofit2:retrofit:2.4.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
+
+
 }
