--- a/Android 9/app/build.gradle
+++ b/Android 9/app/build.gradle
@@ -40,5 +40,8 @@ dependencies {
 
     implementation 'com.squareup.picasso:picasso:2.71828'
 
+    // LiveData + ViewModel
+    implementation "android.arch.lifecycle:extensions:1.1.1"
+
 
 }
